# surv-royale

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  Makefile  README.md  STYLEGUIDE.txt  build-linux.sh  build-macos.sh  build-unix.sh  build-windows.bat  gitconfig  org.Fenex330.SurvRoyale.yml  package.sh  prebuild.bat  prebuild.sh  server.conf  surv-royale.rb
.github/workflows/: build.yml  build2.yml
GameData/: LICENSE.txt
GameData/audio/music/: background-theme-menu.webm
SFML.framework/Versions/2.5.1/: SFML
SFML.framework/Versions/2.5.1/Resources/CMake/: SFMLSharedTargets.cmake
appimage/: SurvRoyale.desktop  SurvRoyale.sh
src/: Global.hpp  MainPlayer.cpp  common.hpp  config.hpp  dxTarRead.h
src/client/: Bullet.hpp  Game.cpp  Game.hpp  MainPlayer.cpp  MainPlayer.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  dxTarRead.h  headers.hpp  main.cpp
src/client/imgui/: imconfig.h
src/server/: Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  Item.hpp  Manager.cpp  Manager.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp  actions.hpp  headers.hpp  main.cpp
